# Edu-Community-FastAPI-BE

./: .env.dev  .gitignore  app.py  main.py  pyproject.toml  requirements.txt
controller/: comment.py  comments.py  files.py  post.py  posts.py  users.py
database/: index.py
model/: AI_model.py  comment_model.py  db_connect_test.py  post_model.py  user_model.py
router/: comments_router.py  files_router.py  posts_router.py  users_router.py
util/: authUtil.py  errorHandler.py  validUtil.py
util/constant/: httpStatusCode.py
utils/: authUtil.py
